Scaffolded navigator waterfall.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <h1 class="leading-none font-thin mb-4 text-4xl" id="wrapper-page-title"></h1>
 
-    <pbotool-boilerplate debug="true"></pbotool-boilerplate>
+    <pbotool-financialcyclenavigator debug="true"></pbotool-financialcyclenavigator>
 
 
   </main>
